# Execra6

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  server.mjs  tsconfig.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/activity/: page.tsx
app/agents/: page.tsx
app/dashboard/: page.tsx
app/settings/: page.tsx
components/: ThemeToggle.tsx  WorkspaceOnboarding.tsx
components/agents/: BrowserAgent.tsx  EmailAgent.tsx  GitHubAgent.tsx  WebSearchAgent.tsx
components/landing/: CollapsiblePanel.tsx  CurrentStatusPanel.tsx  FeatureGrid.tsx  HeroSection.tsx  LandingNavbar.tsx  SummaryStrip.tsx
components/layout/: AppShell.tsx  BrandLogo.tsx  TopNavbar.tsx
components/wallet/: ConnectWalletButton.tsx
contracts/task_escrow/: Cargo.toml  README.md
contracts/task_escrow/src/: lib.rs
contracts/task_escrow/test_snapshots/tests/: creates_email_task_with_pending_status.1.json  creates_search_task_with_pending_status.1.json  requires_multisig_approvals_before_completion.1.json  smart_wallet_delegate_can_cancel_task.1.json
docs/: security-checklist.md
lib/: AgentContext.tsx  WalletContext.tsx  githubAccessToken.ts  githubAuth.ts  supabaseClient.ts  supabaseServer.ts  taskFeatures.ts  useHasMounted.ts
lib/llm/: openrouter.ts
scripts/: importLegacyProjects.mjs  installPlaywrightBrowsers.mjs
supabase/: README.md  browser_agent_migration.sql  email_agent_migration.sql  schema.sql  soroban_migration.sql  task_features_migration.sql  web_search_agent_migration.sql
types/: tasks.ts
(+53 files in other folders)
